src/renderer/components/watch-video-live-chat/watch-video-live-chat.css
.card.hasError {
  block-size: auto !important;
  padding: 16px;
}

.relative {
  position: relative;
}

.messageContainer {
  inline-size: 100%;
  block-size: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.messageContainer.hasError {
  flex-direction: column;
  row-gap: 16px;
}

.watchingCount {
  font-weight: normal;
  margin-inline-start: 5px;
  font-size: 15px;
  color: var(--tertiary-text-color);
}

.message {
  font-size: 18px;
  color: var(--tertiary-text-color);
  padding: 0;
  margin: 0;
  word-break: break-word;
}

:deep(.liveChatEmoji) {
  vertical-align: middle;
  margin-block: 0;
  margin-inline: 2px;
}

.errorIcon {
  inline-size: 100%;
  color: var(--tertiary-text-color);
  font-size: 100px;
}

.enableLiveChat {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.superChatComments {
  inline-size: 100%;
  block-size: 50px;
  overflow-x: auto;
  white-space: nowrap;
}

.superChat {
  display: inline-block;
  padding: 1px;
  padding-inline-end: 10px;
  margin-inline: 2px;
  block-size: 30px;
  cursor: pointer;
  background-color: var(--primary-color);
  border-radius: 200px;
}

.superChatContent {
  margin-inline-start: 32px;
  margin-block-start: -25px;
  color: var(--text-with-main-color);
}

.channelThumbnail {
  inline-size: 25px;
  border-radius: 200px;
}

.channelName {
  color: var(--tertiary-text-color);
  font-weight: bold;
  padding-inline-end: 5px;
}

.superChat .channelThumbnail {
  margin-block-start: 3px;
  margin-inline-start: 3px;
  block-size: 25px;
}

.donationAmount {
  color: var(--text-with-main-color);
}

.openedSuperChat {
  background-color: rgb(0 0 0 / 70%);
  inline-size: 100%;
  block-size: 415px;
  position: absolute;
  margin-inline-start: -16px;
  padding-inline-end: 32px;
  inset-block-end: -15px;
  cursor: auto;
  z-index: 1;
}

.superChatMessage {
  inline-size: 90%;
  grid-template-columns: auto;
  margin-inline: 5%;
  margin-block: 25px 10px;
  background-color: var(--primary-color);
  border-radius: 5px;
  position: relative;
}

.upperSuperChatMessage {
  margin-block-start: -15px;
  inline-size: 100%;
  block-size: 55px;
  background-color: var(--primary-color-hover);
  border-radius: 5px 5px 0 0;
}

.openedSuperChat .superChatMessage {
  position: absolute;
}

.comment .superChatMessage {
  padding: 5px;
}

.comment .upperSuperChatMessage {
  padding: 0;
}

.comment {
  inline-size: 100%;
  padding-block: 5px 7px;
  display: grid;
  grid-template-columns: min-content auto;
  gap: 5px;
}

.upperSuperChatMessage .channelThumbnail {
  inline-size: 45px;
  margin-inline-start: 10px;
  margin-block-start: 5px;
}

.upperSuperChatMessage .channelName {
  color: var(--text-with-main-color);
  opacity: 0.7;
  position: absolute;
  inset-block-start: -20px;
  margin-inline-start: 65px;
}

.upperSuperChatMessage .donationAmount {
  color: var(--text-with-main-color);
  font-weight: bold;
  margin-inline-start: 65px;
  position: absolute;
  inset-block-start: 0;
}

.superChatMessage .chatMessage {
  color: var(--text-with-main-color);
  margin-inline-start: 20px;
}

.liveChatComments {
  inline-size: 100%;
  overflow-y: auto;
}

.chatContent {
  margin-block: 5px 2px;
  word-wrap: break-word;
}

.member {
  color: #4caf50;
}

.moderator {
  color: #2196f3;
}

.owner {
  margin-inline-end: 2px;
  background-color: var(--primary-color);
  color: var(--text-with-main-color);
}

.badgeImage {
  inline-size: 14px;
}

.scrollToBottom {
  background-color: var(--accent-color);
  inline-size: 35px;
  block-size: 35px;
  position: absolute;
  inset-inline-start: 45%;
  inset-block-end: 20px;
  cursor: pointer;
  border-radius: 200px;
  text-align: center;
  transition: background 0.2s ease-out;
}

.scrollToBottom:hover,
.scrollToBottom:focus {
  background-color: var(--accent-color-light);
  transition: background 0.2s ease-in;
}

.icon {
  color: var(--text-with-accent-color);
  font-size: 22px;
  position: relative;
  inset-block-start: 0.45rem;
}

